Fix issue with land double counting while both deckbuilders are visible

--- a/app/static/css/clo.css
+++ b/app/static/css/clo.css
@@ -116,6 +116,10 @@ body {
   font-size: .8rem;
 }
 
+.deckbuilder {
+  min-width: 1140px;
+}
+
 .deckbuilder-col {
   box-sizing: border-box;
   min-width: 12.5%!important;
